--- a/style.css
+++ b/style.css
@@ -63,10 +63,14 @@ body {
 }
 
 .hero .brand-image img{
-  width: 300px;
+  /* width: 300px; */
+  height: 85vh;
   border-radius:20px;
 }
 
 .hero .brand-intro .brand-intro-text {
   margin-left: 40px;
+  font-family: consolas, sans-serif;
+  font-size: 18px;
+  font-weight: lighter;
 }
